--- a/online/login.html
+++ b/online/login.html
@@ -7,7 +7,8 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 </head>
 <body style="padding: 0; margin: 0; background-color: #00B5F1;font-family: 'Open Sans', sans-serif;">
-<div style="background: #fff; max-width: 100%; text-align: center;padding: 20px">
+  <p>Exit 404</p>
+<!-- <div style="background: #fff; max-width: 100%; text-align: center;padding: 20px">
 <a href="../index-3.html"> <img src="../images/logo-2.png"></a>
 </div>
 <div style="margin: 40px auto; padding: 10px; border: 6px solid #014888; border-radius: 5px; max-width: 300px;background-color: #fff;">
@@ -21,7 +22,7 @@
 <footer style="margin-top: 300px; text-align: center; color: #fff;">
 &copy; 2021 Union Trade  AG. All Rights Reserved.
 </footer>
-</div>
+</div> -->
 </body>
 
 
