--- a/online/login.html
+++ b/online/login.html
@@ -6,7 +6,8 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 </head>
-<body style="padding: 0; margin: 0; background-color: #00B5F1;font-family: 'Open Sans', sans-serif;">
+<!-- <body style="padding: 0; margin: 0; background-color: #00B5F1;font-family: 'Open Sans', sans-serif;"> -->
+  <body>
   <p>Exit 404</p>
 <!-- <div style="background: #fff; max-width: 100%; text-align: center;padding: 20px">
 <a href="../index-3.html"> <img src="../images/logo-2.png"></a>
